# tut-agentscope

./: .gitignore  pyproject.toml
src/tut_agentscope/t0_studio/: Dockerfile  readme.md
src/tut_agentscope/t10_deep_research/: source_code_analysis.md
src/tut_agentscope/t10_deepresearch/: deep_research_agent_.py
src/tut_agentscope/t1_react/: react_agent.py  t1_react_agent.py  t2_react_agent_mcp.py  t4_react_agent_plan.py
src/tut_agentscope/t2_mcp/: t2_react_agent_mcp.py  t4_tool_group.py  tool_group.py
src/tut_agentscope/t2_mcp/mcp_client/: mcp_client.py
src/tut_agentscope/t2_mcp/mcp_server/: readme.txt
src/tut_agentscope/t3_plan/: t4_react_agent_plan.py
src/tut_agentscope/t4_routing/: routing_by_structured_output.py  routing_by_tool_calls.py  t1_routing_by_structured_output.py  t2_routing_by_tool_calls.py
src/tut_agentscope/t5_embeding/: yyy.py
src/tut_agentscope/t6_handoffs/: handoff_workflow_demo.py
src/tut_agentscope/t7_embedding/: embedding_model_demo.py  milvus_text_search_demo.py  vector_db_demo.py  x.py  xxx.py
src/tut_agentscope/t8_concurrent/: react_agent_concurrent_demo.py
tests/: test.py
